--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,9 @@
 
   <%= render 'shared/create_post' %>
 
-  <%= render 'posts/post' %>
+  <div class="container" id="posts">
+    <%= render @posts %>
+  </div>
+
 
 
