--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,9 @@
       <%= render 'shared/create_post' %>
     <% end %>
 
-    <%= render @posts %>
+  <div class="container" id="posts">
+  <%= render @posts %>
+  </div>
 
 
 
