Modify leave comment

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -34,8 +34,10 @@
       <% end %>
       </div>
 
+      <hr>
+
       <div id="comments">
-      <%= render post.comments %>
+        <%= render post.comments.order(created_at: :asc) %>
       </div>
 
       <div id="comment_form">
