--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="well" id="comment-<%= comment.id %>">
+<div id="comment-<%= comment.id %>">
   <% if comment.user == current_user %>
   <div class="dropdown pull-right">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
