--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,39 +3,21 @@
     <div class="panel-heading">
       <h3 class="panel-title"><%= post.author.name %> <small class="muted">posted <%= time_ago_in_words(post.created_at) %> ago</small></h3>
     </div>
+
     <div class="panel-body">
       <%= post.content %>
     </div>
+
     <div class="panel-footer">
-      <div>
-      <% if post.likes.map{|like| like.user}.include? current_user %>
-        <%= link_to "Unlike", like_path(post_id: post.id, user_id: current_user.id),
-                                            method: 'delete' %>
-      <% else %>
-          <%= link_to "Like", likes_path(like: {post_id: post.id, user_id: current_user.id}),
-                                            method: 'post' %>
-      <% end %>
+      <div id="likes-<%= post.id %>">
+          <%= render partial: 'likes/like', locals: {post: post} %>
       </div>
-      <div>
-        <% if post.likes.any? %>
-          <% if post.likes.find_by(user: current_user.id) %>
-            <% if post.likes.count == 1 %>
-            You like this post
-            <% elsif post.likes.count > 1 %>
-            You and <%= 'other'.pluralize(post.likes.count - 1) %>  like this post
-            <% end %>
-        <% else %>
-          <% if post.likes.count == 1 %>
-            <%= post.likes.first.user.name %> likes this post
-          <% elsif post.likes.count > 1 %>
-            <%= post.likes.last.user.name %> and <%= 'other'.pluralize(post.likes.count - 1) %> like this post
-          <% end %>
-        <% end %>
-      <% end %>
+      <div id="links_like-<%= post.id %>">
+        <%= render partial: 'likes/links_like', locals: {post: post} %>
       </div>
+    </div>
 
-      <hr>
-
+      <div class="panel-footer">
       <div id="comments">
         <%= render post.comments.order(created_at: :asc) %>
       </div>
