--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,12 @@
 
   <h2 class="text-center">Feed</h2>
 
-  <%= render 'shared/create_post' %>
+  <div class="container">
+    <div class="well" id="create-post">
+      <%= render 'shared/create_post' %>
+    </div>
+  </div>
+
 
   <div class="container" id="posts">
     <%= render @posts %>
