Add authorization to controllers

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -20,7 +20,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="updatePost-<%= post.id %>" tabindex="-1" role="dialog" aria-labelledby="updatePostLabel">
-        <%= render partial: 'update_post', locals: {post: post} %>
+        <%= render partial: 'posts/update_post', locals: {post: post} %>
     </div>
 
     <div class="panel-footer">
