--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,19 +4,19 @@
   <h4 id="about"><%= link_to 'About', profile_user_path %></h4>
   <h4 id="friends"><%= link_to 'Friends', friends_user_path %></h4>
   </div>
-</div>
 
+  <div class="well" id="create-post">
+    <%= render 'shared/create_post' %>
+  </div>
 
-
-    <% if @post %>
-      <%= render 'shared/update_post' %>
-    <% else %>
-      <%= render 'shared/create_post' %>
-    <% end %>
-
-  <div class="container" id="posts">
+  <div id="posts">
   <%= render @posts %>
   </div>
+</div>
+
+<div id="infinite-scrolling">
+  <%= will_paginate @posts %>
+</div>
 
 
 
